build/lexer.c
/* Generated by re2c 4.3 on Mon Nov 17 11:20:42 2025 */
#line 1 "src/lexer.re"
// src/lexer.re
#include <stdio.h>
#include <string.h> // for strndup
#include <stdbool.h>
#include "common.h"     // 包含 ParserState 定义
#include "ast.h"        // 包含 AST 定义
#include "parser.tab.h" // 包含 Bison 生成的词法单元定义

// 'yylex_internal' 是 re2c 生成的函数
int yylex_internal(YYSTYPE *yylval, ParserState *state) {
    const unsigned char *yyt1; // re2c 用于捕获文本的指针

yyc_start: // re2c 规则的起始标签

    
#line 19 "build/lexer.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *state->cursor;
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy3;
		case '\n':
		case '\r': goto yy5;
		case '!': goto yy7;
		case '"':
			yyt1 = state->cursor;
			goto yy9;
		case '%': goto yy10;
		case '&': goto yy11;
		case '\'':
			yyt1 = state->cursor;
			goto yy13;
		case '(': goto yy14;
		case ')': goto yy15;
		case '*': goto yy16;
		case '+': goto yy18;
		case ',': goto yy20;
		case '-': goto yy21;
		case '.':
			yyt1 = state->cursor;
			goto yy23;
		case '/': goto yy25;
		case '0':
			yyt1 = state->cursor;
			goto yy26;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			yyt1 = state->cursor;
			goto yy28;
		case ':': goto yy29;
		case ';': goto yy30;
		case '<': goto yy31;
		case '=': goto yy33;
		case '>': goto yy35;
		case '?': goto yy37;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'm':
		case 'o':
		case 'p':
		case 'q':
		case 'u':
		case 'x':
		case 'z':
			yyt1 = state->cursor;
			goto yy39;
		case '[': goto yy42;
		case ']': goto yy43;
		case '^': goto yy44;
		case 'a':
			yyt1 = state->cursor;
			goto yy45;
		case 'b':
			yyt1 = state->cursor;
			goto yy46;
		case 'c':
			yyt1 = state->cursor;
			goto yy47;
		case 'd':
			yyt1 = state->cursor;
			goto yy48;
		case 'e':
			yyt1 = state->cursor;
			goto yy49;
		case 'f':
			yyt1 = state->cursor;
			goto yy50;
		case 'i':
			yyt1 = state->cursor;
			goto yy51;
		case 'l':
			yyt1 = state->cursor;
			goto yy52;
		case 'n':
			yyt1 = state->cursor;
			goto yy53;
		case 'r':
			yyt1 = state->cursor;
			goto yy54;
		case 's':
			yyt1 = state->cursor;
			goto yy55;
		case 't':
			yyt1 = state->cursor;
			goto yy56;
		case 'v':
			yyt1 = state->cursor;
			goto yy57;
		case 'w':
			yyt1 = state->cursor;
			goto yy58;
		case 'y':
			yyt1 = state->cursor;
			goto yy59;
		case '{': goto yy60;
		case '|': goto yy61;
		case '}': goto yy63;
		case '~': goto yy64;
		case 0xC2: goto yy65;
		case 0xE2: goto yy66;
		case 0xEF: goto yy67;
		default:
			if (state->limit <= state->cursor) goto yy324;
			goto yy1;
	}
yy1:
	++state->cursor;
yy2:
#line 197 "src/lexer.re"
	{
            // *** 修复 ***
            fprintf(stderr, "Lexical error: Unexpected character '%.*s' at line %d\n", 1, state->cursor, state->line);
            state->cursor++; // 消耗非法字符
            goto yyc_start;  // 继续扫描
        }
#line 179 "build/lexer.c"
yy3:
	yyaccept = 0;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy3;
		case 0xC2: goto yy68;
		case 0xEF: goto yy70;
		default: goto yy4;
	}
yy4:
#line 29 "src/lexer.re"
	{ 
            goto yyc_start; 
        }
#line 197 "build/lexer.c"
yy5:
	yyaccept = 1;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case '\n':
		case '\r': goto yy5;
		case 0xE2: goto yy71;
		default: goto yy6;
	}
yy6:
#line 34 "src/lexer.re"
	{
            state->line++;
            state->has_seen_newline = true; // <-- 只设置标志
            goto yyc_start; // <-- 继续扫描
        }
#line 214 "build/lexer.c"
yy7:
	yych = *++state->cursor;
	switch (yych) {
		case '=': goto yy72;
		default: goto yy8;
	}
yy8:
#line 96 "src/lexer.re"
	{ return NOT; }
#line 224 "build/lexer.c"
yy9:
	yyaccept = 2;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case 0x00:
			if (state->limit <= state->cursor) goto yy2;
			goto yy74;
		case 0x01:
		case 0x02:
		case 0x03:
		case 0x04:
		case 0x05:
		case 0x06:
		case 0x07:
		case 0x08:
		case '\t':
		case '\v':
		case '\f':
		case 0x0E:
		case 0x0F:
		case 0x10:
		case 0x11:
		case 0x12:
		case 0x13:
		case 0x14:
		case 0x15:
		case 0x16:
		case 0x17:
		case 0x18:
		case 0x19:
		case 0x1A:
		case 0x1B:
		case 0x1C:
		case 0x1D:
		case 0x1E:
		case 0x1F:
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF:
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF:
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4: goto yy75;
		default: goto yy2;
	}
yy10:
	++state->cursor;
#line 86 "src/lexer.re"
	{ return MOD; }
#line 414 "build/lexer.c"
yy11:
	yych = *++state->cursor;
	switch (yych) {
		case '&': goto yy84;
		default: goto yy12;
	}
yy12:
#line 93 "src/lexer.re"
	{ return BIT_AND; }
#line 424 "build/lexer.c"
yy13:
	yyaccept = 2;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case 0x00:
			if (state->limit <= state->cursor) goto yy2;
			goto yy85;
		case 0x01:
		case 0x02:
		case 0x03:
		case 0x04:
		case 0x05:
		case 0x06:
		case 0x07:
		case 0x08:
		case '\t':
		case '\v':
		case '\f':
		case 0x0E:
		case 0x0F:
		case 0x10:
		case 0x11:
		case 0x12:
		case 0x13:
		case 0x14:
		case 0x15:
		case 0x16:
		case 0x17:
		case 0x18:
		case 0x19:
		case 0x1A:
		case 0x1B:
		case 0x1C:
		case 0x1D:
		case 0x1E:
		case 0x1F:
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF:
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF:
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4: goto yy86;
		default: goto yy2;
	}
yy14:
	++state->cursor;
#line 68 "src/lexer.re"
	{ return LPAREN; }
#line 614 "build/lexer.c"
yy15:
	++state->cursor;
#line 69 "src/lexer.re"
	{ return RPAREN; }
#line 619 "build/lexer.c"
yy16:
	yych = *++state->cursor;
	switch (yych) {
		case '*': goto yy95;
		case '=': goto yy97;
		default: goto yy17;
	}
yy17:
#line 85 "src/lexer.re"
	{ return MUL; }
#line 630 "build/lexer.c"
yy18:
	yych = *++state->cursor;
	switch (yych) {
		case '+': goto yy98;
		case '=': goto yy99;
		default: goto yy19;
	}
yy19:
#line 83 "src/lexer.re"
	{ return PLUS; }
#line 641 "build/lexer.c"
yy20:
	++state->cursor;
#line 74 "src/lexer.re"
	{ return COMMA; }
#line 646 "build/lexer.c"
yy21:
	yych = *++state->cursor;
	switch (yych) {
		case '-': goto yy100;
		case '=': goto yy101;
		default: goto yy22;
	}
yy22:
#line 84 "src/lexer.re"
	{ return MINUS; }
#line 657 "build/lexer.c"
yy23:
	yyaccept = 3;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case '.': goto yy102;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy103;
		default: goto yy24;
	}
yy24:
#line 72 "src/lexer.re"
	{ return DOT; }
#line 678 "build/lexer.c"
yy25:
	yych = *++state->cursor;
	switch (yych) {
		case '*': goto yy104;
		case '/': goto yy105;
		default: goto yy2;
	}
yy26:
	yyaccept = 4;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case 'B':
		case 'b': goto yy106;
		case 'O':
		case 'o': goto yy107;
		case 'X':
		case 'x': goto yy108;
		default: goto yy27;
	}
yy27:
	yyt1 = yyt1;
#line 176 "src/lexer.re"
	{
            yylval->str_val = strndup((const char*)yyt1, state->cursor - yyt1);
            return NUMERIC_LITERAL;
        }
#line 705 "build/lexer.c"
yy28:
	yyaccept = 4;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case '.': goto yy109;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy28;
		default: goto yy27;
	}
yy29:
	++state->cursor;
#line 102 "src/lexer.re"
	{ return COLON; }
#line 727 "build/lexer.c"
yy30:
	++state->cursor;
#line 73 "src/lexer.re"
	{ return SEMICOLON; }
#line 732 "build/lexer.c"
yy31:
	yych = *++state->cursor;
	switch (yych) {
		case '<': goto yy110;
		case '=': goto yy111;
		default: goto yy32;
	}
yy32:
#line 75 "src/lexer.re"
	{ return LT; }
#line 743 "build/lexer.c"
yy33:
	yych = *++state->cursor;
	switch (yych) {
		case '=': goto yy112;
		case '>': goto yy114;
		default: goto yy34;
	}
yy34:
#line 103 "src/lexer.re"
	{ return ASSIGN; }
#line 754 "build/lexer.c"
yy35:
	yych = *++state->cursor;
	switch (yych) {
		case '=': goto yy115;
		case '>': goto yy116;
		default: goto yy36;
	}
yy36:
#line 76 "src/lexer.re"
	{ return GT; }
#line 765 "build/lexer.c"
yy37:
	yych = *++state->cursor;
	switch (yych) {
		case '?': goto yy118;
		default: goto yy38;
	}
yy38:
#line 101 "src/lexer.re"
	{ return CONDITIONAL; }
#line 775 "build/lexer.c"
yy39:
	yych = *++state->cursor;
yy40:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy39;
		default: goto yy41;
	}
yy41:
	yyt1 = yyt1;
#line 154 "src/lexer.re"
	{
            size_t len = state->cursor - yyt1;
            yylval->str_val = strndup((const char*)yyt1, len);
            return IDENTIFIER;
        }
#line 853 "build/lexer.c"
yy42:
	++state->cursor;
#line 70 "src/lexer.re"
	{ return LBRACK; }
#line 858 "build/lexer.c"
yy43:
	++state->cursor;
#line 71 "src/lexer.re"
	{ return RBRACK; }
#line 863 "build/lexer.c"
yy44:
	++state->cursor;
#line 95 "src/lexer.re"
	{ return BIT_XOR; }
#line 868 "build/lexer.c"
yy45:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'w': goto yy119;
		default: goto yy40;
	}
yy46:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'r': goto yy120;
		default: goto yy40;
	}
yy47:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'a': goto yy121;
		case 'l': goto yy122;
		case 'o': goto yy123;
		default: goto yy40;
	}
yy48:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy124;
		case 'o': goto yy125;
		default: goto yy40;
	}
yy49:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'l': goto yy127;
		case 'n': goto yy128;
		case 'x': goto yy129;
		default: goto yy40;
	}
yy50:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'a': goto yy130;
		case 'i': goto yy131;
		case 'o': goto yy132;
		case 'u': goto yy133;
		default: goto yy40;
	}
yy51:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'f': goto yy134;
		case 'm': goto yy136;
		case 'n': goto yy137;
		default: goto yy40;
	}
yy52:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy139;
		default: goto yy40;
	}
yy53:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy140;
		case 'u': goto yy141;
		default: goto yy40;
	}
yy54:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy142;
		default: goto yy40;
	}
yy55:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 't': goto yy143;
		case 'u': goto yy144;
		case 'w': goto yy145;
		default: goto yy40;
	}
yy56:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'h': goto yy146;
		case 'r': goto yy147;
		case 'y': goto yy148;
		default: goto yy40;
	}
yy57:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'a': goto yy149;
		case 'o': goto yy150;
		default: goto yy40;
	}
yy58:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'h': goto yy151;
		case 'i': goto yy152;
		default: goto yy40;
	}
yy59:
	yych = *++state->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'i': goto yy153;
		default: goto yy40;
	}
yy60:
	++state->cursor;
#line 66 "src/lexer.re"
	{ return LBRACE; }
#line 995 "build/lexer.c"
yy61:
	yych = *++state->cursor;
	switch (yych) {
		case '|': goto yy154;
		default: goto yy62;
	}
yy62:
#line 94 "src/lexer.re"
	{ return BIT_OR; }
#line 1005 "build/lexer.c"
yy63:
	++state->cursor;
#line 67 "src/lexer.re"
	{ return RBRACE; }
#line 1010 "build/lexer.c"
yy64:
	++state->cursor;
#line 97 "src/lexer.re"
	{ return BIT_NOT; }
#line 1015 "build/lexer.c"
yy65:
	yych = *++state->cursor;
	switch (yych) {
		case 0xA0: goto yy3;
		default: goto yy2;
	}
yy66:
	yyaccept = 2;
	yych = *(state->marker = ++state->cursor);
	switch (yych) {
		case 0x80: goto yy155;
